# md

./: .gitignore  =5.4.0  Cargo.toml  CargoCMDs.md  KNOWHOW.md  README.md  code.md  code.rs  opengl.md  pyproject.toml
.bin/: cleanup  keep  run  setup  video
.cargo/: config.toml
C:/temp/rust-builds/md/: .rustc_info.json
C:/temp/rust-builds/md/flycheck0/: stderr
C:/temp/rust-builds/md/flycheck1/: stderr
crates/md_core/: Cargo.toml
crates/md_core/src/: lib.rs  particle.rs
crates/md_doc/: Cargo.toml  README.md
crates/md_sim/: Cargo.toml
crates/md_sim/src/: file_io.rs  force.rs  forces.rs  lib.rs  motion.rs  simulation.rs
crates/md_viz/: Cargo.toml
crates/md_viz/src/: camera.rs  draw_particles.rs  lib.rs  objects.rs  scene.rs  templates.rs
crates/md_viz/src/old/: draw_particles
docs/: cmds.md  opengl.md  simulations.md
docs/simulations/: CSR.md  MulticomponentParticles.md  Quaternions.md  grid_verlet.md
docs/src/: lib.rs
examples/: Cargo.toml  Cargo.toml_backup  bubbles.rs  cleanup.rs  create_video.rs  develop.rs  setup.rs  setup1.rs  triangle  view_sphere.rs  window
input/: 2d_rotation.json  abp.json  ball_surface.json  benchmark.json  bounce_2balls_config.json  coeff.json  coeff_restitution_config.json  scene.json  silo.json  silo_config.json  simple_bouncing_balls.json  simple_bouncing_balls_config.json
input/backup_configs/: default_config.json  fluid_config.json
md_core/: Cargo.toml
md_core/src/: particle.rs
md_sim/: Cargo.toml
md_sim/src/: file_io.rs  lib.rs  particle.rs  simulation.rs
md_viz/: Cargo.toml
md_viz/src/: camera.rs  camerabackup.rs  gizmo.rs  lib.rs  objects.rs  primitives.rs  scene animation  scene copy  scene.rs  shapes  shapes.rs  templates.rs  video.rs  window
output/: sim_config_0000000000.json
output/snapshots/: snapshot_0000000000.parquet  snapshot_0000000100.parquet  snapshot_0000000200.parquet  snapshot_0000000300.parquet  snapshot_0000000400.parquet  snapshot_0000000500.parquet  snapshot_0000000600.parquet  snapshot_0000000700.parquet  snapshot_0000000800.parquet  snapshot_0000000900.parquet  snapshot_0000001000.parquet  snapshot_0000001100.parquet  snapshot_0000001200.parquet  snapshot_0000001300.parquet  snapshot_0000001400.parquet  snapshot_0000001500.parquet  snapshot_0000001600.parquet  snapshot_0000001700.parquet  snapshot_0000001800.parquet  snapshot_0000001900.parquet  snapshot_0000002000.parquet  snapshot_0000002100.parquet  snapshot_0000002200.parquet  snapshot_0000002300.parquet  snapshot_0000002400.parquet  snapshot_0000002500.parquet  snapshot_0000002600.parquet  snapshot_0000002700.parquet  snapshot_0000002800.parquet  snapshot_0000002900.parquet  snapshot_0000003000.parquet  snapshot_0000003100.parquet  snapshot_0000003200.parquet  snapshot_0000003300.parquet  snapshot_0000003400.parquet  snapshot_0000003500.parquet  snapshot_0000003600.parquet  snapshot_0000003700.parquet  snapshot_0000003800.parquet  snapshot_0000003900.parquet  (+111 more)
python_scripts/: 2d_rotation.py  2d_rotation_b.py  abp.py  ball_surface.py  benchmark.py  coeff.py  silo.py  silo_headless.py  silo_setup.py  simple_bouncing_balls.py  utility.py  view_snapshot.py
python_scripts/coeff_restitution/: calc_coeff.py  estimate_coeff.py  setup_coeff.py
python_scripts/simple_bouncing_balls/: calc_coeff.py
resources/: opengl.md
scripts/: benchmark  cleanup  run  view_snapshot.py
src/: lib.rs  test_utils.rs
src/md_sim/: README.md  file_io.rs  force.rs  mod.rs  models.rs  motion.rs  neighbours.rs  particle.rs  simulation.rs
src/md_sim/force/: force.rs  mod.rs  neighbours.rs  pairwise.rs  single.rs  tests.rs  utils.rs
src/md_sim/motion/: change.rs  geometry.rs  integration.rs  mod.rs  motion.rs  tests.rs
src/md_sim/particle/: analysis.rs  geometry.rs  mod.rs  particle.rs  tests.rs
src/md_sim/utils/: file_io.rs  mod.rs  models.rs  test_utils.rs  tests.rs
src/md_viz/: camera.rs  mod.rs  objects.rs  scene.rs  scene_backup  templates.rs  video  video.rs
test/: test
