# your_md_project/Cargo.toml
[workspace]
members = [ 
    "crates/md_doc",
    "crates/md_sim",
    "crates/md_core",
    "crates/md_viz",
]
resolver = "2"
default-members=["crates/md_doc"]

[workspace.dependencies]
rand = "0.8"
three-d = { version = "0.18.2", features = ["headless"] }
glam = {version="0.27", features = ["serde"]}
image = "0.24"
winit = "0.28"
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"
polars = { version = "0.38"} 
tempfile = "3.24.0"



