[package]
name = "md"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
# Move your workspace dependencies here
rand = "0.8"
three-d = { version = "0.18.2", features = ["headless"] }
glam = { version = "0.27", features = ["serde"] }
image = "0.24"
winit = "0.28"
serde = "1.0.228"
serde_json = "1.0.138" # Update this to match as well
polars = { version = "0.38", features = ["parquet", "lazy"] }
tempfile = "3.24.0"
itertools = "0.13"
soa_derive = "0.13"
chrono = "0.4"
bytemuck = "1.14"


[profile.release]
debug = false #comment out when not profiling
