# md_viz/Cargo.toml
[package]
name = "md_viz"
version = "0.1.0"
edition = "2021"

[dependencies]
three-d = { workspace = true } 
glam = { workspace = true } 
image = {workspace = true} 
md_core = { path = "../md_core" }
md_sim = { path = "../md_sim" }


# --- Examples ---
[[example]]
name = "view_sphere" 
path = "../examples/view_sphere.rs"

[[example]]
name = "triangle" 
path = "../examples/triangle.rs"

[[example]]
name = "setup" 
path = "../examples/setup.rs"
