# md_viz/Cargo.toml
[package]
name = "md_viz"
version = "0.1.0"
edition = "2021"

[dependencies]
three-d = { workspace = true } 
glam = { workspace = true } 
image = {workspace = true} 
winit = {workspace = true}
tempfile = {workspace = true}
md_core = { path = "../md_core" }
md_sim = { path = "../md_sim" }



[[example]]
name = "develop"
path = "../examples/develop.rs"

[[example]]
name = "setup"
path = "../examples/setup.rs"

[[example]]
name = "create_video"
path = "../examples/create_video.rs"
