# md_viz/Cargo.toml
[package]
name = "md_viz"
version = "0.1.0"
edition = "2021"

[dependencies]
three-d = { workspace = true } 
glam = { workspace = true } 
image = {workspace = true} 
winit = {workspace = true}
tempfile = {workspace = true}
serde = { workspace = true, features = ["derive"] }
md_core = { path = "../md_core" }
md_sim = { path = "../md_sim" }



[[example]]
name = "develop"
path = "../../examples/develop.rs"

[[example]]
name = "cleanup"
path = "../../examples/cleanup.rs"

[[example]]
name = "bubbles"
path = "../../examples/bubbles.rs"

[[example]]
name = "setup"
path = "../../examples/setup.rs"

[[example]]
name = "create_video"
path = "../../examples/create_video.rs"
